[package]
name = "passay-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.25"
fancy-regex = "0.14.0"
rand = "0.9.0"
[dev-dependencies]
env_logger = "0.11.6"
rand = "0.9.0"
base64 = "0.22.1"
sha1_smol = "1.0.1"
bcrypt = "0.17"