[package]
name = "passay-rs"
version = "0.1.0"
edition = "2024"
authors = ["Mojtaba Zarezadeh <mojtab.zare@gmail.com>"]
description = "A password validation library inspired by the Java Passay library."
readme = "README.md"
repository = "https://github.com/mojtab23/passay-rs"
license = "MIT OR Apache-2.0"
keywords = ["password", "validation", "security", "policy", "generator"]
categories = ["cryptography", "authentication"]

[dependencies]
log = "0.4.25"
fancy-regex = "0.14.0"
rand = "0.9.0"
[dev-dependencies]
env_logger = "0.11.6"
rand = "0.9.0"
base64 = "0.22.1"
sha1_smol = "1.0.1"
bcrypt = "0.17"